# xtb-python

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  environment.yml  ffibuilder.py  meson.build  meson_options.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  python-linter.yml
docker-image/: Dockerfile  requirements.txt
docs/: Makefile  ase-calculator.rst  conf.py  general-api.rst  index.rst  installation.rst  make.bat  qcarchive.rst
subprojects/: xtb-6.5.1.wrap  xtb.wrap
tests/: test_ase.py  test_interface.py  test_qcschema.py  test_utils.py
xtb/: __init__.py  interface.py  libxtb.py  test_interface.py  test_libxtb.py  test_utils.py  utils.py
xtb/ase/: __init__.py  calculator.py  test_calculator.py  test_optimize.py
xtb/qcschema/: __init__.py  harness.py  test_qcschema.py
