[metadata]
name = xtb-python
version = 20.1
desciption = Python API of the extended tight binding program
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/grimme-lab/xtb-python
license = LGPL3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = xtb
install_requires =
    cffi
    numpy
python_requires = >=3.5

[options.extras_require]
ase = ase
qcschema = qcelemental
