[metadata]
name = xtb-python
version = 20.1
desciption = Python API of the extended tight binding program
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/grimme-lab/xtb-python
license = LGPL3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
install_requires =
    cffi
    numpy
tests_require =
    pytest
    pytest-cov
    ase
    qcelemental
python_requires = >=3.6

[options.extras_require]
ase = ase
qcschema = qcelemental

[coverage:run]
omit =
    */test_*.py

[aliases]
test=pytest
